--- a/pages/district/join/business/business.wxss
+++ b/pages/district/join/business/business.wxss
@@ -55,6 +55,7 @@
 .info_tag{width: 140rpx;}
 .info_item input{width: calc(100% - 150rpx);}
 .info_item textarea{width: calc(100% - 150rpx);height: 100rpx;}
+.optype{width:200rpx;height: 35rpx;border:1rpx solid silver;font-size: 24rpx;}
 
 .info_imginfo{font-size: 28rpx;height: auto;width:100%;}
 .info_imginfo .uploadtxt{text-decoration-line: underline;color: blue;}
