--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -47,7 +47,7 @@
     <view class="swiper_txtctn">
       <swiper class="swiper_self" autoplay='true' vertical="true" interval='4000' duration='500' circular='true'>
         <block wx:for="{{textADInfo}}" wx:for-index="index">
-          <swiper-item class="swiper_item">
+          <swiper-item class="swiper_item" bindtap="onSwiperAD" data-pid="{{item.productId}}">
             <van-notice-bar left-icon="volume-o" color="orange" text="{{item.text}}" />
             <!-- <view class='swiper_text' mode='aspectFill'>"{{item.text}}"</view> -->
           </swiper-item>
@@ -59,7 +59,7 @@
     <view class="swiper_imgctn">
       <swiper class="swiper_self" autoplay='true' interval='5000' duration='1000' circular='true'>
         <block wx:for="{{imgADInfo}}" wx:for-index="index">
-          <swiper-item class="swiper_img_item">
+          <swiper-item class="swiper_img_item"  bindtap="onSwiperAD" data-pid="{{item.productId}}">
             <image src='{{item.img}}' class='swiper_img' mode='aspectFit'></image>
             <view class="swiper_img_txtbg" hidden="{{item.text==''?true:false}}"></view>
             <text class="swiper_img_txt" hidden="{{item.text==''?true:false}}">{{item.text}}</text>
