--- a/pages/district/search/search.wxml
+++ b/pages/district/search/search.wxml
@@ -46,20 +46,20 @@
     <view class="list_ctn">
 
       <block wx:for="{{nearbyList}}" wx:for-index="index">    
-      <view class="item_ctn" bindtap="goSsqInfo" data-tab="0">
-        <view class="item_pos">
+      <view class="item_ctn">
+        <view class="item_pos" bindtap="openPosition" data-latitude="{{item.latitude}}" data-longitude="{{item.longitude}}">
           <image class="pos_img" mode="aspectFit" src="../../../static/custom/icons/icon_pos_b.png"></image>
           <text class="pos_km">{{item.distance}}km</text>
         </view>
         <view class="item_img">
           <image class="img_img" mode="aspectFit" src="{{item.imageUrl}}"></image>
         </view>
-        <view class="item_name">
+        <view class="item_name" bindtap="goSsqInfo" data-tab="0" data-ssqid="{{item.ssqid}}">
           <text class="name_name">{{item.name}}社圈</text>
           <text class="name_area">{{item.area}}</text>
         </view>
         <view class="item_btn">
-          <button class="btn_btn">加入</button>
+          <button class="btn_btn" bindtap="goJoin" data-ssqid="{{item.ssqid}}">加入</button>
         </view>
       </view>
       </block>
