--- a/pages/district/search/search.wxss
+++ b/pages/district/search/search.wxss
@@ -16,4 +16,5 @@ border: 1rpx solid gainsboro;border-radius: 10rpx;margin: 10rpx 0rpx;}
 .name_area{font-size: 24rpx;}
 .item_btn{width: 20%;height: 100%;display: flex;flex-direction: row;align-items: center;}
 .btn_btn{width: 96%;border: 0rpx;}
+.bigspace{width: 100%;height: 70rpx;}
 
