--- a/pages/admin/announcement/publish.wxml
+++ b/pages/admin/announcement/publish.wxml
@@ -57,7 +57,7 @@
 
   </view>
 
-  <button type="primary">确认发布</button>
+  <button type="primary" bindtap="onCommit">确认发布</button>
 
   <van-popup show="{{popShow}}" position="bottom" overlay="{{ true }}" bind:close="onClose">
     <van-datetime-picker
