--- a/pages/district/join/join.wxml
+++ b/pages/district/join/join.wxml
@@ -15,6 +15,7 @@
       <text>创建者：locky.lee</text>
     </view>
   </view>
+  <van-toast id="van-toast" />
   <view class="contents_info">
     <text class="ctn_des">欢迎入驻,入驻方式说明：</text>
     <text class="ctn_des">>成员：可以预约该商圈的相关产品或服务</text>
@@ -22,8 +23,8 @@
     <text class="ctn_des">>商家：有营业执照，可以给商圈提供全方位的产品或服务</text>
     <view class="ctn_btns">
       <button bindtap="joinApply" data-type="1">成员快速加入</button>
-      <button bindtap="joinApply" data-type="2">申请个人入驻</button>
-      <button bindtap="joinApply" data-type="3">申请商家入驻</button>
+      <button bindtap="joinApply" data-type="2">申请商家入驻</button>
+      <button bindtap="joinApply" data-type="3">申请个人入驻</button>
       <button bindtap="buySsqAD">购买商圈广告</button>
     </view>
   </view>
