--- a/pages/district/join/business/business.wxml
+++ b/pages/district/join/business/business.wxml
@@ -23,13 +23,13 @@
         <view class="info_item">
           <text class="info_star">*</text>
           <text class="info_tag">商家名字：</text>
-          <input maxlength="8" placeholder="请输入商家名字"></input>
+          <input maxlength="12" type="text" bindinput="onNameInfo" placeholder="请输入商家名字"></input>
         </view>
         <view class="line_space"></view>
         <view class="info_item">
           <text class="info_star">*</text>
           <text class="info_tag">经营信息：</text>
-          <textarea maxlength="50" placeholder="请输入个人经营的相关信息"></textarea>
+          <textarea maxlength="80" type="text" bindinput="onOpTextInfo" placeholder="请输入个人经营的相关信息"></textarea>
         </view>
         <view class="line_space"></view>
         <view class="info_item">
@@ -41,13 +41,13 @@
         <view class="info_item">
           <text class="info_star">*</text>
           <text class="info_tag">商家地址：</text>
-          <textarea maxlength="25" placeholder="请输地址信息"></textarea>
+          <textarea maxlength="25" type="text" bindinput="onAddrInfo" placeholder="请输地址信息"></textarea>
         </view>
         <view class="line_space"></view>
         <view class="info_item">
           <text class="info_star">*</text>
           <text class="info_tag">商家联系：</text>
-          <input maxlength="30" placeholder="请输入商家联系信息"></input>
+          <input maxlength="30" type="text" bindinput="onContactInfo" placeholder="请输入商家联系信息"></input>
         </view>
       </view>
 
@@ -60,7 +60,7 @@
         <text class="uploadtxt" bindtap="getCurPosition">使用当前位置</text>
       </view>
       <view class="info_imginfo">
-        <text class="curpos">商家位置：（{{positions.latitude}} , {{positions.longitude}}）</text>
+        <text class="curpos">商家位置：（{{markText}}）</text>
       </view>
       <view class="line_space"></view>
 
@@ -79,7 +79,7 @@
     </view>
   </view>
   <text class="tips">平台会在1到5个工作日内审核该申请，请留意相关信息，谢谢！</text>
-  <button class="comitbtn">提交申请</button>
+  <button class="comitbtn" bindtap="onCommit">提交申请</button>
   <van-action-sheet
     show="{{ show }}"
     actions="{{ actions }}"
