--- a/pages/my/person/info.wxml
+++ b/pages/my/person/info.wxml
@@ -1,13 +1,13 @@
 <!--pages/my/person/info.wxml-->
 <view class="container" style="background-color:white;">
   <view class="sel_avatar_ctn">
-    <image class="sel_avatar_img" src="{{_userInfo.avatarUrl}}" mode="aspectFill"></image>
-    <text class="sel_user_name" bindtap="admin">{{_userInfo.nickName}}</text>
+    <image class="sel_avatar_img" src="{{userInfo.avatarUrl}}" mode="aspectFill"></image>
+    <text class="sel_user_name" bindtap="admin">{{userInfo.nickName}}</text>
   </view>
   <view class="sel_info_ctn">
-    <text class="sel_info_ctn_txt">ID：{{_userInfo.ID}}</text>
-    <text class="sel_info_ctn_txt">性别：{{_userInfo.gender==1?"男":"女"}}</text>
-    <text class="sel_info_ctn_txt">城市：{{_userInfo.city}}</text>
+    <text class="sel_info_ctn_txt">ID：{{userInfo.ID}}</text>
+    <text class="sel_info_ctn_txt">性别：{{userInfo.gender==1?"男":"女"}}</text>
+    <text class="sel_info_ctn_txt">城市：{{userInfo.city}}</text>
     <text class="sel_info_ctn_txt">我加入的社圈：</text>
   </view>
   <view class="sel_info_ssq_ctn">
@@ -15,16 +15,16 @@
       <view class="sel_info_ssq">
         <image class="ssq_pos_img" mode="aspectFit" src="../../../static/custom/icons/icon_pos_b.png"></image>
         <view class="ssq_pos_ctn">
-          <text class="ssq_pos_name">{{item.name}}  社圈</text>
-          <text class="ssq_pos_area">{{item.area}}</text>
+          <text class="ssq_pos_name">{{item.ssqname}}  社圈</text>
+          <text class="ssq_pos_area">{{item.ssqarea}}</text>
         </view>
-        <text class="ssq_pos_btn">退出</text>
+        <text class="ssq_pos_btn" bindtap="onQuit" data-ssqid="{{item.ssqid}}" data-ssqname="{{item.ssqname}}" data-roletype="{{item.roletype}}" data-create_time="{{item.create_time}}" >退出</text>
       </view>
     </block>
   </view>
   <view class="sel_info_about_ssq" bindtap="goAbout">
     关于社区商业圈   >>
   </view>
-
+  <van-dialog id="van-dialog" />
 
 </view>
