--- a/pages/admin/adcfg/adcfg.wxml
+++ b/pages/admin/adcfg/adcfg.wxml
@@ -42,7 +42,7 @@
       <view class="item_title">
         <view class="short_space"></view>
         <text class="dataST">数量：</text>
-        <input class="dataSV" bindinput="onCount"></input>
+        <input class="dataSV" type="number" bindinput="onCount"></input>
       </view>
     </view>
 
@@ -54,12 +54,12 @@
       <view class="item_title">
         <view class="short_space"></view>
         <text class="dataST">现价：</text>
-        <input class="dataSV" bindinput="onCurPrice" data-type="1"></input>
+        <input class="dataSV" type="digit" bindinput="onCurPrice" data-type="1"></input>
       </view>
       <view class="item_title">
         <view class="short_space"></view>
         <text class="dataST">原价：</text>
-        <input class="dataSV" bindinput="onOldPrice" data-type="2"></input>
+        <input class="dataSV" type="digit" bindinput="onOldPrice" data-type="2"></input>
       </view>
     </view>
 
@@ -81,18 +81,18 @@
       <view class="item_title">
         <view class="short_space"></view>
         <text class="dataST">起始时分：</text>
-        <text class="dataSV" bindtap="selectDate" data-type="3">{{hour_begin_f}}</text>
+        <text class="dataSV" bindtap="selectDate" data-type="3">{{hour_begin}}</text>
       </view>
       <view class="item_title">
         <view class="short_space"></view>
         <text class="dataET">结束时分：</text>
-        <text class="dataEV" bindtap="selectDate" data-type="4">{{hour_end_f}}</text>
+        <text class="dataEV" bindtap="selectDate" data-type="4">{{hour_end}}</text>
       </view>
     </view>
 
   </view>
 
-  <button type="primary" bindtap="onCommit">确认发布</button>
+  <button type="primary" bindtap="onCommit">发布配置</button>
 
   <van-popup show="{{popShow}}" position="bottom" overlay="{{ true }}" bind:close="onClose">
     <van-datetime-picker
@@ -100,6 +100,17 @@
       value="{{ currentDate }}"
       min-date="{{ minDate }}"
       max-date="{{ maxDate }}"
+      bind:confirm="onConfirm"
+      bind:cancel="onCancel"
+    />
+  </van-popup>
+
+  <van-popup show="{{time_popShow}}" position="bottom" overlay="{{ true }}" bind:close="onClose">
+    <van-datetime-picker
+      type="time"
+      value="{{ currentHour }}"
+      min-hour="{{ minHour }}"
+      max-hour="{{ maxHour }}"
       bind:confirm="onConfirm"
       bind:cancel="onCancel"
     />
