调整广告配置的时期格式

--- a/pages/admin/adcfg/adcfg.wxml
+++ b/pages/admin/adcfg/adcfg.wxml
@@ -96,10 +96,10 @@
 
   <van-popup show="{{popShow}}" position="bottom" overlay="{{ true }}" bind:close="onClose">
     <van-datetime-picker
-      type="datetime"
+      type="date"
       value="{{ currentDate }}"
       min-date="{{ minDate }}"
-      max-date="{{ maxDate }}"
+      formatter="{{ formatter }}"
       bind:confirm="onConfirm"
       bind:cancel="onCancel"
     />
