--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -2,14 +2,26 @@
 .container{
   width: 96%;height: auto;margin-left: 2%;overflow: hidden;
 }
+.shop_name{width: 100%;height: 80rpx;display: flex;flex-direction: row;align-items: center; margin-top: 15rpx;}
+.name_km{height: 100%;width: 100rpx;font-size: 20rpx;display: flex;flex-direction: column;align-items: center;}
+.name_km image{width: 60rpx;height: 60rpx;}
+.name_img{width: 80rpx;height: 80rpx;}
+.name_img image{width: 100%;height: 100%;border-radius: 50%;}
+.name_name{height: auto;width: calc(100% - 180rpx);margin-left: 10rpx;display: flex;flex-direction: column;}
+.name_value{font-size: 32rpx;}
+.name_ssq{font-size: 20rpx;}
+.space_line{width: 100%;height: 2rpx;background-color: gainsboro;margin-top: 5rpx;margin-bottom: 5rpx;}
 
-.myssq{width: 100%; height: 260rpx;}
-.myssq_info{width: 100%;height: auto;margin-top: 20rpx;display: flex;flex-direction: column;}
-.name_ctn{width: 100%;height: 50rpx;display: flex;flex-direction: row;align-items: center;}
-.myssq_icon{width: 40rpx;height: 100%;}
-.myssq_name{width: 100%;font-size: 38rpx;padding-left: 10rpx;}
-.myssq_imgctn{width: 100%;height: 180rpx;margin-top:10rpx;display: flex;flex-direction: column;align-items: center;}
-.myssq_img{width: 100%;height: 100%;}
+.shop_detail{width: 100%;height: auto;display: flex;flex-direction: row;}
+.detail_left{width: calc(100% - 200rpx);}
+.detail_right{width: 200rpx;}
+.detail_right image{width: 100%;height: 100%;}
+.shop_sum{width: 100%;height: auto;display: flex;flex-direction: column;font-size: 24rpx;}
+.sum_item{width: 100%;height: auto;display: flex;flex-direction: row;}
+.sum_item_left{width:50%;height: auto;display: flex;flex-direction: row;}
+.sum_item_right{width: 49%;height: auto;display: flex;flex-direction: row;}
+.sum_item_tag{width: 120rpx;}
+.sum_item_value{width: calc(100% - 120rpx);}
 
 .null_info{width: calc(100% - 20rpx);height: 80rpx;font-size: 28rpx;display: flex;flex-direction: column;align-items: center;margin: 20rpx;}
 
