--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -23,17 +23,8 @@
 .sum_item_tag{width: 120rpx;}
 .sum_item_value{width: calc(100% - 120rpx);}
 
-.null_info{width: calc(100% - 20rpx);height: 80rpx;font-size: 28rpx;display: flex;flex-direction: column;align-items: center;margin: 20rpx;}
+.null_info{width: calc(100% - 20rpx);height: 280rpx;font-size: 32rpx;display: flex;flex-direction: column;margin: 20rpx;}
 
-.pick_ssq{width: 100%;height: auto;font-size: 28rpx;border:1rpx solid gainsboro;
-  border-left-color: white;border-right-color: white;margin-top: 10rpx; 
-}
-.pick_ssqlist{width: 100%;height: auto;padding-left: 30rpx;padding-top: 10rpx;}
-.pick_item{padding: 0rpx;}
-.item_ctn{width: 600rpx;display: flex;flex-direction: row;align-items: center;}
-.item_name{width: calc(100% - 150rpx);}
-.item_type{width: 150rpx;text-align: right;}
-.item_space{width: 100%;height: 10rpx;}
 
 .ad_info{width: 100%;height: 55rpx;font-size: 28rpx;
 display: flex;flex-direction: row;border: 1rpx solid white;border-bottom-color: gainsboro;}
