--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -82,19 +82,23 @@
       <scroll-view>
         <block wx:for="{{myShopInfo.product_list}}" wx:for-index="index">
           <van-card
-            num="{{item.count}}"
+            num="{{item.unit}}"
             price="{{item.price}}"
             desc="{{item.des}}"
             title="{{item.name}}"
-            thumb="{{ item.images[0] }}"
+            thumb="{{ item.imgUrls[0] }}"
             bindtap="onCardClick"
           >
-            <view slot="tags">
-              <van-tag color="#f2826a" plain class="t_space">推荐</van-tag>
-              <van-tag color="#f2826a" plain class="t_space">优惠</van-tag>
+            <view slot="tags" class="tagsctn">
+              <view hidden="{{item.flag1==1 ? false : true}}">
+                <van-tag color="#f2826a" plain class="t_space">推荐</van-tag>
+              </view>
+              <view hidden="{{item.flag2==1 ? false : true}}">
+                <van-tag color="#f2826a" plain class="t_space">优惠</van-tag>
+              </view>
             </view>
             <view slot="footer">
-              <van-button size="mini" class="t_space">上架</van-button>
+              <van-button size="mini" class="t_space">{{item.onsell==0 ? '上架' : '下架' }}</van-button>
               <van-button size="mini" class="t_space" catchtap="onOpenADChoose" data-id="{{item.ID}}">做广告</van-button>
               <van-button size="mini" class="t_space" catchtap="proEdit" data-id="{{item.ID}}">编辑</van-button>
             </view>
@@ -103,7 +107,7 @@
       </scroll-view>
     </view>
     <button class="plus" bindtap="goNew">+</button>
-    <text class="plus_txt">点击‘+’号新增产品，最多可以创建18个产品</text>
+    <text class="plus_txt">点击‘+’号新增产品</text>
     <view class="bottom_space"></view>
   </view>
 
