--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -42,3 +42,4 @@ display: flex;flex-direction: row;border: 1rpx solid white;border-bottom-color: 
 .bottom_space{width: 100%;height: 100rpx;}
 
 .adType_ctn{width: 100%; height: 100%;}
+.tagsctn{display: flex;flex-direction: row;}
