调整产品列表展示

--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -81,28 +81,7 @@
     <view class="pro_list">
       <scroll-view>
         <block wx:for="{{myShopInfo.product_list}}" wx:for-index="index">
-          <van-card
-            num="{{item.unit}}"
-            price="{{item.price}}"
-            desc="{{item.des}}"
-            title="{{item.name}}"
-            thumb="{{ item.imgUrls[0] }}"
-            bindtap="onCardClick"
-          >
-            <view slot="tags" class="tagsctn">
-              <view hidden="{{item.flag1==1 ? false : true}}">
-                <van-tag color="#f2826a" plain class="t_space">推荐</van-tag>
-              </view>
-              <view hidden="{{item.flag2==1 ? false : true}}">
-                <van-tag color="#f2826a" plain class="t_space">优惠</van-tag>
-              </view>
-            </view>
-            <view slot="footer">
-              <van-button size="mini" class="t_space">{{item.onsell==0 ? '上架' : '下架' }}</van-button>
-              <van-button size="mini" class="t_space" catchtap="onOpenADChoose" data-id="{{item.ID}}">做广告</van-button>
-              <van-button size="mini" class="t_space" catchtap="proEdit" data-id="{{item.ID}}">编辑</van-button>
-            </view>
-          </van-card>
+        <ssq-product-my product="{{item}}" sellText="{{item.sellText}}" bind:onCardClick="onCardClick" bind:onSellClick="onSell" bind:onADClick="onOpenADChoose" bind:onEditClick="proEdit"/>  
         </block>
       </scroll-view>
     </view>
