--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -14,7 +14,7 @@
 
 .shop_detail{width: 100%;height: auto;display: flex;flex-direction: row;}
 .detail_left{width: calc(100% - 200rpx);}
-.detail_right{width: 200rpx;}
+.detail_right{width: 200rpx;height: 200rpx;}
 .detail_right image{width: 100%;height: 100%;}
 .shop_sum{width: 100%;height: auto;display: flex;flex-direction: column;font-size: 24rpx;}
 .sum_item{width: 100%;height: auto;display: flex;flex-direction: row;}
