--- a/components/ssq/product-item-my/index.wxml
+++ b/components/ssq/product-item-my/index.wxml
@@ -17,6 +17,7 @@
     <van-button type="{{onsellBtnType}}" size="mini" class="t_space" catchtap="onSell" data-id="{{product.productid}}" data-onsell="{{product.onsell}}">{{sellText}}</van-button>
     <van-button size="mini" class="t_space" catchtap="onOpenADChoose" data-id="{{product.productid}}">做广告</van-button>
     <van-button size="mini" class="t_space" catchtap="proEdit" data-id="{{product.productid}}">编辑</van-button>
+    <van-button size="mini" class="t_space" catchtap="proDelete" data-id="{{product.productid}}">删除</van-button>
   </view>
 </van-card>
 </view>
