--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -36,7 +36,7 @@ display: flex;flex-direction: row;border: 1rpx solid white;border-bottom-color: 
 .pro_title{font-size: 28rpx;}
 .pro_des{font-size: 20rpx;margin-left: 30rpx;}
 .pro_list{width: 100%;height: auto;}
-.plus{font-size: 32rpx;}
+.plus{font-size: 32rpx;margin-top: 5rpx;}
 .plus_txt{font-size: 24rpx;color: rgb(116, 116, 116);}
 .t_space{margin: 5rpx;}
 .bottom_space{width: 100%;height: 100rpx;}
