--- a/pages/my/product/edit/edit.wxss
+++ b/pages/my/product/edit/edit.wxss
@@ -4,7 +4,7 @@
 .space_line{width: 96%;height: 2rpx;margin-left: 2%;background-color: gainsboro;}
 .new_name{width: 96%;margin-left: 2%;height: auto;font-size: 28rpx;margin-top: 10rpx;
 display: flex;flex-direction: row;align-items: center;margin-bottom: 10rpx;}
-.name_input{border: 1rpx solid silver;}
+.name_input{border: 1rpx solid gainsboro;border-radius: 5rpx;padding: 5rpx;width: 140rpx;text-align: center;font-size: 24rpx;}
 
 .new_image{width: 96%;height: 180rpx;margin-left:2%;background-color: gainsboro;
 display: flex;flex-direction: column;align-items: center;}
@@ -13,7 +13,7 @@ display: flex;flex-direction: column;align-items: center;}
 .img_btn{width:100%;height: 20rpx;text-align: center;font-size: 28rpx;color: blue;text-decoration-line: underline;}
 
 .new_des{width: 96%;margin-left: 2%;height: auto;font-size: 28rpx;margin-top: 15rpx;}
-.des_input{width: 100%;height: 140rpx;border: 1rpx solid silver;border-radius: 10rpx;}
+.des_input{width: 100%;height: 140rpx;border: 1rpx solid silver;border-radius: 10rpx;padding: 10rpx;}
 .new_date{width: 96%;margin-left: 2%;height: auto;font-size: 28rpx;margin-top: 10rpx;
 display: flex;flex-direction: column;margin-bottom: 10rpx;}
 .date_space{width: 100%;height: 5rpx;}
