--- a/pages/my/product/edit/edit.wxml
+++ b/pages/my/product/edit/edit.wxml
@@ -8,7 +8,7 @@
 
   <view class="new_image">
     <view class="img_ctn">
-      <block wx:for="{{productInfo.imgUrls}}" wx:for-index="index">
+      <block wx:for="{{imgesArr}}" wx:for-index="index">
         <image class="img_img" mode="aspectFit" src="{{item}}"  data-src="{{item}}" bindtap="previewImage"></image>
       </block>
     </view>
