--- a/pages/ad/image/image.wxml
+++ b/pages/ad/image/image.wxml
@@ -5,12 +5,12 @@
     <view class="hspace"></view>
     <swiper class="fullwh" autoplay='true' interval='4000' duration='500' circular='true'>
       <swiper-item class="swiper_img_item">
-        <image src='{{adImage}}' class='swiper_img' mode='aspectFit'></image>
+        <image src='{{adImage}}' class='swiper_img' mode='aaaspectFit'></image>
         <view class="swiper_img_txtbg" hidden="{{adText==''?true:false}}"></view>
         <text class="swiper_img_txt" hidden="{{adText==''?true:false}}">{{adText}}</text>
       </swiper-item>
       <swiper-item class="swiper_img_item">
-        <image src='{{adImage}}' class='swiper_img' mode='aspectFit'></image>
+        <image src='{{adImage}}' class='swiper_img' mode='aaaspectFit'></image>
         <view class="swiper_img_txtbg" hidden="{{adText==''?true:false}}"></view>
         <text class="swiper_img_txt" hidden="{{adText==''?true:false}}">{{adText}}</text>
       </swiper-item>
@@ -19,33 +19,33 @@
   <view class="space_line"></view>
   <view class="product_info fullwh">
     <view class="fullwh text_ctn">
-      <text class="text_tag">产品/项目名称：</text>
+      <text class="text_tag">产品名称：</text>
       <text class="text_content">{{productInfo.name}}</text>
     </view>
     <view class="hspace"></view>
     <view class="fullwh text_ctn">
-      <text class="text_tag">产品/项目描述：</text>
+      <text class="text_tag">产品描述：</text>
       <text class="text_content">{{productInfo.des}}</text>
     </view>
   </view>
   <view class="space_line"></view>
   <view class="ad_info fullwh">
-    <text>请选择一张图片作为大图广告（必填）：</text>
+    <text class="ad_tips">请选择一张图片作为大图广告（必填）：</text>
     <view class="hspace"></view>
     <radio-group class="radio-group" bindchange="radioChange">
-      <label class="radio" wx:for="{{productInfo.images}}" wx:for-index="index">
+      <label class="radio" wx:for="{{productInfo.imgUrls}}" wx:for-index="index">
         <radio value="{{item}}" >
           <image src="{{item}}" mode=""></image>
         </radio>
       </label>
     </radio-group>
     <view class="hspace"></view>
-    <text>请输入配图文字（可选填）：</text>
+    <text class="ad_tips">请输入配图文字（可选）：</text>
     <view class="hspace"></view>
     <textarea maxlength="100" placeholder="限长100个字" bindinput="onInput"></textarea>
   </view>
   <view class="space_line"></view>
-  <view class="ad_date fullwh">
+  <view class="ad_date fullwh" hidden="{{ imageADInfo==null ? true : false}}">
     <text class="fullwh">请选择广告时段及次数：</text>
     <view class="date_list">
       <text class="date_circle">注意：以下时段的广告周期为：{{imageADInfo.dateStart}} - {{imageADInfo.dateEnd}}</text>
@@ -53,8 +53,8 @@
       <block wx:for="{{imageADInfo.list}}" wx:for-index="index">
       <view class="list_item">
         <view class="text_ctn">
-          <text class="text_time">>{{item.time}}</text>
-          <text class="text_price">￥{{item.price}}</text>
+          <text class="text_time">>{{item.begin_hour}}-{{item.end_hour}}</text>
+          <text class="text_price">￥{{item.cur_price}}</text>
           <text class="text_left">剩余：{{item.left}}</text>
         </view>
         <van-stepper
@@ -64,13 +64,21 @@
           max="{{item.left}}"
           step="1"
           bind:change="onChange"
-          data-id="{{item.id}}"
-          data-price="{{item.price}}"
+          data-id="{{item.ad_period_id}}"
+          data-price="{{item.cur_price}}"
         />
       </view>
       </block>
 
-      <button type="primary">支付：￥{{priceTotal}}</button>
+      <button type="primary" bindtap="onPay">支付：￥{{priceTotal}}</button>
     </view>
   </view>
+  
+  <view  hidden="{{ imageADInfo==null ? false : true}}">
+    <text>暂无可以购买的广告！请留意后续更新，谢谢！</text>
+  </view>
+
+  <van-toast id="van-toast" />
+  <van-dialog id="van-dialog" />
+
 </view>
