--- a/pages/ad/image/image.wxss
+++ b/pages/ad/image/image.wxss
@@ -8,13 +8,14 @@
 .preview_ctn swiper{width:100%;height:320rpx;}
 .product_info{font-size: 28rpx;}
 .text_ctn{display: flex;flex-direction: row;}
-.text_tag{width: 230rpx;}
-.text_content{width: calc(100% - 230rpx);height: auto;color: rgb(100, 99, 99);}
+.text_tag{width: 150rpx;}
+.text_content{width: calc(100% - 150rpx);height: auto;color: rgb(100, 99, 99);}
 .ad_info{font-size: 28rpx;}
 .radio-group{display: flex;flex-direction: row;}
 .radio{height: 100rpx;}
 .radio image{height: 100rpx;width: 100rpx;}
 .ad_info textarea{height: 120rpx;width:100%;border: 1rpx solid silver;padding: 5rpx;}
+.ad_info .ad_tips{color: red;}
 .ad_date{font-size: 36rpx;}
 .vspace{width: 20rpx;height: 100%;}
 .date_circle{font-size: 28rpx;color: red;}
