--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -48,7 +48,7 @@
       <swiper class="swiper_self" autoplay='true' vertical="true" interval='4000' duration='500' circular='true'>
         <block wx:for="{{textADInfo}}" wx:for-index="index">
           <swiper-item class="swiper_item" bindtap="onSwiperAD" data-pid="{{item.productId}}">
-            <van-notice-bar left-icon="volume-o" color="orange" text="{{item.text}}" />
+            <van-notice-bar left-icon="volume-o" color="orange" text="{{item.adtext}}" />
             <!-- <view class='swiper_text' mode='aspectFill'>"{{item.text}}"</view> -->
           </swiper-item>
         </block>
