--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -80,7 +80,7 @@
       <van-row>
         <block wx:for="{{shopADInfo}}" wx:for-index="index">
           <van-col span="6">
-            <ssq-logo cname="{{item.text}}" cid="{{item.shopId}}" cflag="{{item.flag}}" cimg="{{item.img}}"  bindtap="onBusClick" data-id="{{item.shopId}}" />
+            <ssq-logo shop="{{item}}" cflag="{{item.flag}}" bindtap="onBusClick" data-id="{{item.shopid}}" />
           </van-col>
         </block>
       </van-row>
@@ -94,7 +94,7 @@
       <van-row>
         <block wx:for="{{personADInfo}}" wx:for-index="index">
           <van-col span="6">
-            <ssq-logo cname="{{item.text}}" cid="{{item.shopId}}" cflag="{{item.flag}}" cimg="{{item.img}}"  bindtap="onPerClick" data-id="{{item.shopId}}" />
+            <ssq-logo shop="{{item}}" cflag="{{item.flag}}" bindtap="onPerClick" data-id="{{item.shopid}}" />
           </van-col>
         </block>
       </van-row>
